syntax = "proto3";


package orc_service;

option go_package = "github.com/shubhamthakar/Mage/orchestrator;Mageorchestrator";

service UserName {
  rpc GetUser (Username) returns (User) {}
}

message Username {
  string name = 1;
}

message User {
  string name = 1;
  string class = 2;
  int64 roll = 3; 
}



